--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "faker": "^5.1.0",
     "firebase": "^8.0.1",
     "jquery": "^3.5.1",
+    "md5": "^2.3.0",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-toastify": "^6.1.0",
     "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
   },
